--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
                                 <div class="event-content"><h4>小樽運河</h4><p>Blue Hour 藍調時刻拍照。</p></div>
                             </div>
                         </div>
-                        <a href="#" class="btn-download"><i class="fas fa-file-pdf"></i> 下載憑證</a>
+                        <a href="voucher_pelago.pdf" target="_blank" class="btn-download"><i class="fas fa-file-pdf"></i> 下載憑證</a>
                     </div>
                 </div>
             </div>
@@ -487,7 +487,7 @@
                                 <div class="event-content"><h4>層雲峽冰瀑祭</h4><p>夜間點燈，夢幻七彩冰雕。</p></div>
                             </div>
                         </div>
-                        <a href="#" class="btn-download"><i class="fas fa-file-pdf"></i> 下載憑證</a>
+                        <a href="voucher_kkday.pdf" target="_blank" class="btn-download"><i class="fas fa-file-pdf"></i> 下載憑證</a>
                     </div>
                 </div>
             </div>
