--- a/index.html
+++ b/index.html
@@ -500,8 +500,15 @@
                         </div>
                         <div class="event-item">
                             <div class="event-dot"></div>
-                            <span class="event-time">17:30</span>
-                            <div class="event-content"><h4>成吉思汗烤肉</h4><p>晚餐：達摩 (Daruma) 本店。</p></div>
+                            <span class="event-time">19:00</span>
+                            <div class="event-content">
+                                <h4>Den Japanese Buffet</h4>
+                                <p>Crab, Shabu-Shabu & Yakiniku in Hokkaido</p>
+                                <div style="display:flex; gap:10px; margin-top:8px;">
+                                    <a href="voucher_buffet.pdf" target="_blank" style="display:inline-flex; align-items:center; gap:5px; padding:6px 12px; background:#fffbeb; color:#d97706; border:1px solid #fcd34d; border-radius:8px; font-size:0.8rem; font-weight:700; text-decoration:none;"><i class="fas fa-file-pdf"></i> 憑證</a>
+                                    <a href="https://www.google.com/maps/search/?api=1&query=Den+Japanese+Buffet+Sapporo" target="_blank" style="display:inline-flex; align-items:center; gap:5px; padding:6px 12px; background:#f0f9ff; color:#0ea5e9; border:1px solid #bae6fd; border-radius:8px; font-size:0.8rem; font-weight:700; text-decoration:none;"><i class="fas fa-location-arrow"></i> 導航</a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                     <div class="hotel-card">
