--- a/index.html
+++ b/index.html
@@ -408,12 +408,23 @@
                 <div class="card-body">
                     <div class="boarding-pass">
                         <div class="bp-main">
-                            <div><div class="bp-time">12:35</div><span class="bp-code">TPE</span></div>
+                            <div><div class="bp-time">10:20</div><span class="bp-code">HKG</span></div>
                             <i class="fas fa-plane" style="color:#cbd5e1; transform:rotate(90deg)"></i>
-                            <div style="text-align:right"><div class="bp-time">16:40</div><span class="bp-code">NRT</span></div>
+                            <div style="text-align:right"><div class="bp-time">15:35</div><span class="bp-code">NRT</span></div>
                         </div>
                         <div style="display:flex; justify-content:space-between; align-items:flex-end;">
-                            <div style="font-size:0.8rem; color:#94a3b8; margin-top:5px;">CI104 • 冠廷</div>
+                            <div style="font-size:0.8rem; color:#94a3b8; margin-top:5px;">JL736 • 冠廷</div>
+                            <a href="https://www.flightradar24.com/data/flights/jl736" target="_blank" class="bp-link">查看動態</a>
+                        </div>
+                    </div>
+                    <div class="boarding-pass">
+                        <div class="bp-main">
+                            <div><div class="bp-time">12:35</div><span class="bp-code">TPE</span></div>
+                            <i class="fas fa-plane" style="color:#cbd5e1; transform:rotate(90deg)"></i>
+                            <div style="text-align:right"><div class="bp-time">16:35</div><span class="bp-code">NRT</span></div>
+                        </div>
+                        <div style="display:flex; justify-content:space-between; align-items:flex-end;">
+                            <div style="font-size:0.8rem; color:#94a3b8; margin-top:5px;">CI104 • 浥耘</div>
                             <a href="https://www.flightradar24.com/data/flights/ci104" target="_blank" class="bp-link">查看動態</a>
                         </div>
                     </div>
